@@ -7,7 +7,7 @@
 []
 "t_INT"
 (x^3 + 1)/(x^10 + 2)
-1/2*x^3 + 1/2
+[]
 1/(x + 1)
 1/(x + 1)
 []
@@ -17,4 +17,6 @@ x^2/(-x + 1)
 1/(-x^5 + x^4)
 x^10/(-x^11 + 11*x^10 - 55*x^9 + 165*x^8 - 330*x^7 + 462*x^6 - 462*x^5 + 330
 *x^4 - 165*x^3 + 55*x^2 - 11*x + 1)
-Total time spent: 1
+(x^5 + x + 2)/(-x^11 + 11*x^10 - 55*x^9 + 165*x^8 - 330*x^7 + 462*x^6 - 462*
+x^5 + 330*x^4 - 165*x^3 + 55*x^2 - 11*x + 1)
+Total time spent: 0
